# vin_main

./: build.sh  data.json  file.txt  links.txt  manage.py  pyproject.toml  render.yaml  requirements.txt
cars/: admin.py  models.py  serializers.py  views.py
cars/migrations/: 0001_initial.py  0002_car_is_hidden_v2_alter_car_is_hidden.py  0002_photos.py  0003_alter_car_options.py  0004_alter_car_options_alter_car_is_hidden_and_more.py
templates/: get_links_page.html
vin_check/: asgi.py  settings.py  urls.py  wsgi.py
vin_main_poetry/: asgi.py  settings.py  urls.py  wsgi.py
