[tool.poetry]
name = "vin-main-poetry"
version = "0.1.0"
description = ""
authors = ["Andrei Kulakov <kulakov1@tut.by>"]
readme = "README.md"
packages = [{include = "vin_main_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
